[package]
name = "mirror-derive"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"]